@@ -1821,6 +1821,12 @@ Wed Feb 11 23:37:35 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>
 	  Shin").  [ruby-talk:273360]
 	  back ported from 1.9. fix [ruby-core:19791]
 
+Tue Feb 10 00:01:19 2009  Brent Roman  <brent@mbari.org>
+
+        * gc.c:  don't redundantly mark stack before base of current thread
+        
+        * version.h:  bumped date
+
 Mon Feb  9 17:35:38 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* win32/win32.c (rb_w32_accept): secure fd before accept because if
